src/test/deca/syntax/valid/resultats/test16_while-lex.res
'{': [@0,241:241='{',<36>,14:0]
IDENT: [@1,244:246='int',<26>,15:1]
IDENT: [@2,248:248='x',<26>,15:5]
';': [@3,249:249=';',<39>,15:6]
'while': [@4,254:258='while',<25>,17:1]
'(': [@5,259:259='(',<34>,17:6]
INT: [@6,260:260='1',<1>,17:7]
'==': [@7,261:262='==',<40>,17:8]
'true': [@8,263:266='true',<24>,17:10]
')': [@9,267:267=')',<35>,17:14]
'{': [@10,268:268='{',<36>,17:15]
';': [@11,269:269=';',<39>,17:16]
'}': [@12,270:270='}',<37>,17:17]
'while': [@13,316:320='while',<25>,18:1]
'(': [@14,321:321='(',<34>,18:6]
'false': [@15,322:326='false',<10>,18:7]
'>': [@16,328:328='>',<28>,18:13]
FLOAT: [@17,330:333='8.4f',<46>,18:15]
')': [@18,334:334=')',<35>,18:19]
'{': [@19,337:337='{',<36>,19:1]
'while': [@20,341:345='while',<25>,20:2]
'(': [@21,346:346='(',<34>,20:7]
IDENT: [@22,347:347='x',<26>,20:8]
'=': [@23,348:348='=',<29>,20:9]
'true': [@24,349:352='true',<24>,20:10]
')': [@25,353:353=')',<35>,20:14]
'{': [@26,354:354='{',<36>,20:15]
INT: [@27,390:390='4',<1>,21:3]
'/': [@28,391:391='/',<30>,21:4]
'false': [@29,392:396='false',<10>,21:5]
';': [@30,397:397=';',<39>,21:10]
'}': [@31,449:449='}',<37>,22:2]
'}': [@32,452:452='}',<37>,23:1]
'}': [@33,454:454='}',<37>,24:0]
