src/test/deca/syntax/invalid/resultats/test25_ifelse-lex.res
'{': [@0,299:299='{',<36>,14:0]
IDENT: [@1,302:304='int',<26>,15:1]
IDENT: [@2,306:306='i',<26>,15:5]
';': [@3,307:307=';',<39>,15:6]
'if': [@4,310:311='if',<11>,16:1]
'(': [@5,312:312='(',<34>,16:3]
'false': [@6,313:317='false',<10>,16:4]
')': [@7,318:318=')',<35>,16:9]
'{': [@8,319:319='{',<36>,16:10]
IDENT: [@9,323:323='i',<26>,17:2]
'=': [@10,325:325='=',<29>,17:4]
INT: [@11,327:327='2',<1>,17:6]
';': [@12,328:328=';',<39>,17:7]
'}': [@13,331:331='}',<37>,18:1]
IDENT: [@14,333:338='elseif',<26>,18:3]
'(': [@15,340:340='(',<34>,18:10]
'true': [@16,341:344='true',<24>,18:11]
')': [@17,345:345=')',<35>,18:15]
'{': [@18,346:346='{',<36>,18:16]
IDENT: [@19,372:372='i',<26>,19:2]
'=': [@20,373:373='=',<29>,19:3]
INT: [@21,374:374='1',<1>,19:4]
';': [@22,375:375=';',<39>,19:5]
'}': [@23,378:378='}',<37>,20:1]
'println': [@24,383:389='println',<18>,22:1]
'(': [@25,390:390='(',<34>,22:8]
STRING: [@26,391:397='"Hello"',<47>,22:9]
')': [@27,398:398=')',<35>,22:16]
';': [@28,399:399=';',<39>,22:17]
'}': [@29,401:401='}',<37>,23:0]
